--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,10 @@ dependencies {
     implementation "com.google.android.gms:play-services-games:15.0.1"
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.android.gms:play-services-location:9.8.0'
+    implementation 'com.android.support:support-v4:23.4.0'
+
+    //these two lines are added
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
 
 }
